AB#2823 AB#2820 feat: help page, mock data, back button

--- a/interfaces/Referral-App/src/app/referral/referral.page.html
+++ b/interfaces/Referral-App/src/app/referral/referral.page.html
@@ -1,9 +1,63 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>
-      Referral
+    <ion-title class="ion-text-center">
+      {{ 'tabs.title'| translate }}
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <div>
+    <div *ngIf="!category">
+      <category
+        *ngFor="let _category of categories"
+        [category]="_category"
+        (click)="clickCategory(_category)"
+      ></category>
+    </div>
+    <div *ngIf="category && !subCategory">
+      <category
+        [category]="category"
+        [show-description]="true"
+        (click)="clickCategory(category)"
+      ></category>
+    </div>
+    <div *ngIf="category && !subCategory">
+      <sub-category
+        *ngFor="let _subCategory of subCategories | categoryFilter: category"
+        [sub-category]="_subCategory"
+        (click)="clickSubCategory(_subCategory)"
+      ></sub-category>
+    </div>
+    <div *ngIf="category && subCategory">
+      <sub-category
+        [sub-category]="subCategory"
+        [show-description]="true"
+        (click)="clickSubCategory(subCategory)"
+      ></sub-category>
+    </div>
+  </div>
+  <div *ngIf="category && subCategory">
+    <offer
+      *ngFor="let _offer of offers | categoryFilter: category | subCategoryFilter: subCategory"
+      [offer]="_offer"
+      (click)="clickOffer(_offer)"
+    ></offer>
+  </div>
+</ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-buttons slot="start" *ngIf="category">
+      <ion-back-button
+        defaultHref="/tabs/referral"
+        (click)="goBack()"
+      ></ion-back-button>
+    </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-button href="/tabs/help">
+        <ion-icon slot="icon-only" name="help"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-footer>
