--- a/interfaces/PA-App/src/app/personal-components/select-language/select-language.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-language/select-language.component.html
@@ -4,11 +4,6 @@
       <play-text-audio [key]="language.introductionKey" class="ion-float-start ion-margin-end"></play-text-audio>
       {{ language.introduction|translate }}
     </p>
-
-    <more-info-button buttonKey="personal.select-language.more-info"
-                      messageKey="personal.select-language.info-message"
-                      headingKey="personal.select-language.more-info"
-    ></more-info-button>
   </dialogue-turn>
   <dialogue-turn actor="self"
                  *ngIf="!isDisabled"
@@ -60,5 +55,19 @@
       <play-text-audio key="personal.select-language.result" class="ion-float-start ion-margin-end"></play-text-audio>
       <span [innerHTML]="'personal.select-language.result'|translate:{ language:'<strong>'+languageChoiceName+'</strong>' }"></span>
     </p>
+  </dialogue-turn>
+  <dialogue-turn isConnected="true"
+                 *ngIf="isDisabled"
+                 [isSpoken]="isDisabled"
+  >
+    <p>
+      <play-text-audio key="personal.select-language.intro" class="ion-float-start ion-margin-end">
+      </play-text-audio>
+      {{ 'personal.select-language.intro'|translate }}
+    </p>
+    <more-info-button buttonKey="personal.select-language.more-info"
+                      messageKey="personal.select-language.info-message"
+                      headingKey="personal.select-language.more-info"
+    ></more-info-button>
   </dialogue-turn>
 </section>
