--- a/interfaces/Referral-App/src/app/components/category/category.component.scss
+++ b/interfaces/Referral-App/src/app/components/category/category.component.scss
@@ -1,12 +1,13 @@
 ion-card {
-  width: 150px;
-  height: 150px;
+  width: 100px;
+  height: 100px;
   display: inline-block;
   background: var(--ion-color-warning);
+  cursor: pointer;
 
   ion-img {
-    height: 85px;
-    width: 85px;
+    height: 45px;
+    width: 45px;
     margin: auto;
   }
 
@@ -15,6 +16,8 @@ ion-card {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    text-transform: uppercase;
+    font-size: 1rem;
   }
 }
 
