--- a/interfaces/Referral-App/src/app/components/sub-category/sub-category.component.scss
+++ b/interfaces/Referral-App/src/app/components/sub-category/sub-category.component.scss
@@ -3,6 +3,7 @@ ion-card {
   height: 150px;
   display: inline-block;
   background: var(--ion-color-warning);
+  cursor: pointer;
 
   ion-img {
     height: 85px;
@@ -13,8 +14,9 @@ ion-card {
   ion-card-title {
     font-weight: normal;
     overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+    white-space: normal;
+    text-transform: uppercase;
+    font-size: .8rem;
   }
 }
 
