AB#2824 feat: clicking selected (sub)category triggers go back

--- a/interfaces/Referral-App/src/app/referral/referral.page.html
+++ b/interfaces/Referral-App/src/app/referral/referral.page.html
@@ -19,7 +19,7 @@
       <category
         [category]="category"
         [show-description]="true"
-        (click)="clickCategory(category)"
+        (click)="goBack()"
       ></category>
     </div>
     <div *ngIf="category && !subCategory">
@@ -33,7 +33,7 @@
       <sub-category
         [sub-category]="subCategory"
         [show-description]="true"
-        (click)="clickSubCategory(subCategory)"
+        (click)="goBack()"
       ></sub-category>
     </div>
   </div>
