AB#2938 feat: help page

--- a/interfaces/Referral-App/src/app/referral/referral.page.html
+++ b/interfaces/Referral-App/src/app/referral/referral.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title class="ion-text-center">
-      {{ 'tabs.title'| translate }}
+      {{ 'tabs.referral-title'| translate }}
     </ion-title>
   </ion-toolbar>
 </ion-header>
