--- a/interfaces/AW-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
+++ b/interfaces/AW-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
@@ -50,7 +50,7 @@
             required
             [name]="question.code"
             [disabled]="isSubmitted"
-            (ionChange)="onChangeWithValidation(question.code, dateInput.value, (dateInput.valid && (dateInput.dirty || dateInput.touched)))"
+            (ionChange)="onChangeWithValidation(question.code, dateInput.value, dateInput.valid)"
             debounce="100"
           ></ion-input>
         </div>
@@ -88,7 +88,7 @@
             required
             [name]="question.code"
             [disabled]="isSubmitted"
-            (ionChange)="onChangeWithValidation(question.code, defaultInput.value, (defaultInput.valid && (defaultInput.dirty || defaultInput.touched)))"
+            (ionChange)="onChangeWithValidation(question.code, defaultInput.value, defaultInput.valid)"
             debounce="300"
           ></ion-input>
         </div>
