AB#2997 prevent form-submit on enter

--- a/interfaces/AW-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
+++ b/interfaces/AW-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
@@ -1,4 +1,7 @@
-<form #theForm="ngForm">
+<form 
+  #theForm="ngForm" 
+  (keydown.enter)="$event.preventDefault()"
+>
 
   <div *ngFor="let question of questions; let i=index; first as isFirst;">
     <dialogue-turn
