--- a/interfaces/Referral-App/src/app/components/offer/offer.component.html
+++ b/interfaces/Referral-App/src/app/components/offer/offer.component.html
@@ -1,9 +1,9 @@
 <ion-card>
   <ion-card-header>
     <ion-img [src]="offer.offerIcon" [alt]="offer.offerName"></ion-img>
-    <ion-card-title class="ion-text-center">{{
-      offer.offerName
-    }}</ion-card-title>
+    <ion-card-title class="ion-text-center">
+      {{ offer.offerName }}
+    </ion-card-title>
   </ion-card-header>
 
   <ion-card-content></ion-card-content>
