--- a/interfaces/Referral-App/src/app/components/sub-category/sub-category.component.scss
+++ b/interfaces/Referral-App/src/app/components/sub-category/sub-category.component.scss
@@ -1,9 +1,19 @@
+.sub-category {
+  display: inline-block;
+}
+
+.position-relative {
+  position: relative;
+}
+
 ion-card {
   width: 150px;
   height: 150px;
   display: inline-block;
   background: var(--ion-color-warning);
   cursor: pointer;
+  overflow: visible;
+  vertical-align: top;
 
   ion-img {
     height: 85px;
@@ -16,11 +26,21 @@ ion-card {
     overflow: hidden;
     white-space: normal;
     text-transform: uppercase;
-    font-size: .8rem;
+    font-size: 0.8rem;
   }
 }
 
-ion-text {
+ion-card-content {
   position: absolute;
-  margin: 20px;
+  margin: 10px;
+
+  &.vertical-text {
+    margin-top: 0;
+    padding-top: 0;
+  }
+
+  &.horizontal-text {
+    top: 0;
+    left: 150px;
+  }
 }
