--- a/interfaces/Referral-App/src/app/components/offer/offer.component.scss
+++ b/interfaces/Referral-App/src/app/components/offer/offer.component.scss
@@ -1,3 +1,7 @@
+.offer {
+  position: relative;
+}
+
 ion-card {
   width: 150px;
   height: 150px;
@@ -15,6 +19,13 @@ ion-card {
     overflow: hidden;
     white-space: normal;
     text-transform: uppercase;
-    font-size: .8rem;
+    font-size: 0.8rem;
   }
+}
+
+ion-card-content {
+  position: absolute;
+  top: 0;
+  left: 150px;
+  margin: 15px;
 }
