AB#2976 feat: view offer/item page

--- a/interfaces/Referral-App/src/app/components/offer/offer.component.html
+++ b/interfaces/Referral-App/src/app/components/offer/offer.component.html
@@ -9,7 +9,15 @@
   </ion-card>
   <ion-card-content>
     <ion-text>
-      {{ offer.offerDescription }}
+      <p>{{ offer.offerDescription }}</p>
+      <div class="ion-margin-top" *ngIf="showDetails">
+        <p>
+          <a href="{{ offer.offerLink }}">{{ offer.offerLink }}</a>
+        </p>
+      </div>
     </ion-text>
   </ion-card-content>
+  <div class="ion-margin" *ngIf="showDetails">
+    <ion-img [src]="offer.offerImage" [alt]="offer.offerName"></ion-img>
+  </div>
 </div>
