--- a/interfaces/Referral-App/src/app/components/sub-category/sub-category.component.scss
+++ b/interfaces/Referral-App/src/app/components/sub-category/sub-category.component.scss
@@ -31,15 +31,18 @@ ion-card {
 }
 
 ion-card-content {
+  visibility: hidden;
   position: absolute;
   margin: 10px;
 
   &.vertical-text {
+    visibility: visible;
     margin-top: 0;
     padding-top: 0;
   }
 
   &.horizontal-text {
+    visibility: visible;
     top: 0;
     left: 150px;
   }
