--- a/interfaces/Referral-App/src/app/referral/referral.page.html
+++ b/interfaces/Referral-App/src/app/referral/referral.page.html
@@ -26,22 +26,32 @@
       <sub-category
         *ngFor="let _subCategory of subCategories | categoryFilter: category"
         [sub-category]="_subCategory"
+        [show-right-description]="false"
+        [show-bottom-description]="true"
         (click)="clickSubCategory(_subCategory)"
       ></sub-category>
     </div>
     <div *ngIf="category && subCategory">
       <sub-category
         [sub-category]="subCategory"
-        [show-description]="true"
+        [show-right-description]="true && !offer"
+        [show-bottom-description]="false"
         (click)="goBack()"
       ></sub-category>
     </div>
   </div>
-  <div *ngIf="category && subCategory">
+  <div *ngIf="category && subCategory && !offer">
     <offer
       *ngFor="let _offer of offers | categoryFilter: category | subCategoryFilter: subCategory"
       [offer]="_offer"
       (click)="clickOffer(_offer)"
+    ></offer>
+  </div>
+  <div *ngIf="category && subCategory && offer">
+    <offer
+      [offer]="offer"
+      [show-details]="true"
+      (click)="clickOffer(offer)"
     ></offer>
   </div>
 </ion-content>
