--- a/interfaces/Referral-App/src/app/referral/referral.page.html
+++ b/interfaces/Referral-App/src/app/referral/referral.page.html
@@ -65,7 +65,7 @@
       ></ion-back-button>
     </ion-buttons>
     <ion-buttons slot="end">
-      <ion-button href="/tabs/help">
+      <ion-button (click)="openHelpModal()">
         <ion-icon slot="icon-only" name="help"></ion-icon>
       </ion-button>
     </ion-buttons>
