AB2790 fix: hide sub category descriptions on small devices

--- a/interfaces/Referral-App/src/app/components/category/category.component.scss
+++ b/interfaces/Referral-App/src/app/components/category/category.component.scss
@@ -13,6 +13,8 @@ ion-card {
     height: 45px;
     width: 45px;
     margin: auto;
+    background-color: white;
+    padding: 5%;
   }
 
   ion-card-title {
