--- a/interfaces/Referral-App/src/app/components/sub-category/sub-category.component.html
+++ b/interfaces/Referral-App/src/app/components/sub-category/sub-category.component.html
@@ -13,6 +13,7 @@
   <ion-card-content
     [class.vertical-text]="showBottomDescription"
     [class.horizontal-text]="showRightDescription"
+    [class.ion-hide-sm-down]="showBottomDescription"
   >
     <ion-text>
       {{ subCategory.subCategoryDescription }}
