AB#3008 skip store-credential

--- a/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
+++ b/interfaces/PA-App/src/app/personal-components/store-credential/store-credential.component.html
@@ -1,4 +1,4 @@
-<section>
+<section *ngIf="!isCanceled">
   <dialogue-turn [actor]="currentProgram?.ngo"
                  *ngIf="credentialReceived"
                  [isSpoken]="credentialReceived"
