--- a/interfaces/PA-App/src/app/personal-components/handle-proof/handle-proof.component.html
+++ b/interfaces/PA-App/src/app/personal-components/handle-proof/handle-proof.component.html
@@ -1,5 +1,9 @@
 <section>
-  <dialogue-turn [actor]="currentProgram?.ngo">
+  <dialogue-turn 
+    [actor]="currentProgram?.ngo"
+    *ngIf="currentProgram?.validation"
+    [isSpoken]="currentProgram?.validation"
+  >
     <p>
       <play-text-audio key="personal.handle-proof.creating" class="ion-float-start ion-margin-end"></play-text-audio>
       {{ 'personal.handle-proof.creating'|translate }}
@@ -10,9 +14,10 @@
     </p>
   </dialogue-turn>
 
-  <dialogue-turn [actor]="currentProgram?.ngo"
-                 *ngIf="inclusionStatus"
-                 [isSpoken]="inclusionStatus"
+  <dialogue-turn 
+    [actor]="currentProgram?.ngo"
+    *ngIf="inclusionStatus"
+    [isSpoken]="inclusionStatus"
   >
     <p *ngIf="inclusionStatusNegative">
       <play-text-audio key="personal.handle-proof.inclusion-status-negative" class="ion-float-start ion-margin-end"></play-text-audio>
