--- a/interfaces/PA-App/src/app/personal-components/select-country/select-country.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-country/select-country.component.html
@@ -11,6 +11,7 @@
         <ion-item *ngFor="let country of countries"
                   color="light"
                   class="ion-no-padding ion-text-wrap"
+                  lines="full"
         >
           <ion-label>{{ country.country }}</ion-label>
           <ion-radio [value]="country.id"
