--- a/interfaces/PA-App/src/app/personal-components/select-fsp/select-fsp.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-fsp/select-fsp.component.html
@@ -16,6 +16,7 @@
         <ion-item *ngFor="let fsp of fsps"
                   color="light"
                   class="ion-no-padding ion-text-wrap"
+                  lines="full"
         >
           <ion-label class="ion-text-wrap">
             {{ fsp.fsp }}
