--- a/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/select-program/select-program.component.html
@@ -21,6 +21,7 @@
         <ion-item *ngFor="let program of programs"
                   color="light"
                   class="ion-no-padding ion-text-wrap"
+                  lines="full"
         >
           <ion-label>
             {{ program.ngo }}: {{ program.title }}
