--- a/interfaces/PA-App/src/app/personal-components/signup-signin/signup-signin.component.html
+++ b/interfaces/PA-App/src/app/personal-components/signup-signin/signup-signin.component.html
@@ -14,6 +14,7 @@
         <ion-item color="light"
                   class="ion-no-padding ion-text-wrap"
                   [disabled]="typeChosen"
+                  lines="full"
         >
           <play-text-audio key="personal.signup-signin.create-id"
                            slot="start"
@@ -27,6 +28,7 @@
         <ion-item color="light"
                   class="ion-no-padding ion-text-wrap"
                   [disabled]="useLocalStorage || typeChosen"
+                  lines="full"
         >
           <play-text-audio key="personal.signup-signin.login-id"
                            slot="start"
