--- a/interfaces/HO-Portal/src/app/pages/registration-validation/registration-validation.page.html
+++ b/interfaces/HO-Portal/src/app/pages/registration-validation/registration-validation.page.html
@@ -13,6 +13,7 @@
   ></app-phase-next>
 
   <app-export-list 
+    *ngIf="program?.validation"
     [programId]="programId" 
     [userRole]="userRole" 
     [exportType]="enumExportType.selectedForValidation"
