--- a/interfaces/HO-Portal/src/app/pages/registration-validation/registration-validation.page.html
+++ b/interfaces/HO-Portal/src/app/pages/registration-validation/registration-validation.page.html
@@ -1,7 +1,12 @@
 <ion-header>
-  <app-header
+  <app-header 
+    *ngIf="program?.validation"
     [title]="'page.program.phases.registrationValidation.label'|translate"
   ></app-header>
+  <app-header 
+    *ngIf="!program?.validation" 
+    [title]="'page.program.phases.registrationValidation.label-no-validation'|translate">
+  </app-header>
 </ion-header>
 
 <ion-content class="ion-padding">
