--- a/interfaces/Referral-App/src/app/tabs/tabs.page.scss
+++ b/interfaces/Referral-App/src/app/tabs/tabs.page.scss
@@ -14,6 +14,6 @@ ion-tab-button {
   &#tab-button-referral {
     --color: var(--ion-color-dark-contrast);
     --color-selected: var(--ion-color-dark-contrast);
-    --background: var(--ion-color-warning);
+    --background: #ffc001;
   }
 }
