--- a/interfaces/PA-App/src/app/personal-components/create-identity/create-identity.component.html
+++ b/interfaces/PA-App/src/app/personal-components/create-identity/create-identity.component.html
@@ -1,12 +1,55 @@
 <dialogue-turn>
   <p>
+    <play-text-audio key="personal.create-identity.consent-question" class="ion-float-start ion-margin-end"></play-text-audio>
+    {{ 'personal.create-identity.consent-question'|translate }}
+  </p>
+
+  <more-info-button
+    buttonKey="personal.create-identity.more-info-data-policy"
+    messageKey="personal.create-identity.info-message-data-policy"
+    headingKey="personal.create-identity.more-info-data-policy"
+  ></more-info-button>
+</dialogue-turn>
+<dialogue-turn actor="self">
+
+  <ion-row class="ion-nowrap ion-align-items-center">
+    <play-text-audio key="personal.create-identity.consent-agree" size="default"></play-text-audio>
+    <ion-button
+      type="button"
+      (click)="consent(true)"
+      [disabled]="isDisabled || userConsent"
+      expand="block"
+      style="flex-basis:100%;"
+    >
+      {{ 'personal.create-identity.consent-agree'|translate }}
+    </ion-button>
+  </ion-row>
+  <ion-row class="ion-nowrap ion-align-items-center">
+    <play-text-audio key="personal.create-identity.consent-disagree" size="default"></play-text-audio>
+    <ion-button
+      type="button"
+      (click)="consent(false)"
+      [disabled]="isDisabled"
+      expand="block"
+      style="flex-basis:100%;"
+      fill="outline"
+    >
+      {{ 'personal.create-identity.consent-disagree'|translate }}
+    </ion-button>
+  </ion-row>
+</dialogue-turn>
+<dialogue-turn
+  *ngIf="userConsent"
+  [isSpoken]="userConsent"
+>
+  <p>
     <play-text-audio key="personal.create-identity.introduction" class="ion-float-start ion-margin-end"></play-text-audio>
     {{ 'personal.create-identity.introduction'|translate }}
   </p>
 </dialogue-turn>
 <dialogue-turn
-  *ngIf="useLocalStorage"
-  [isSpoken]="useLocalStorage"
+  *ngIf="userConsent && useLocalStorage"
+  [isSpoken]="userConsent && useLocalStorage"
   isConnected="true"
 >
   <p>
@@ -21,8 +64,8 @@
   ></more-info-button>
 </dialogue-turn>
 <dialogue-turn
-  *ngIf="!useLocalStorage"
-  [isSpoken]="!useLocalStorage"
+  *ngIf="userConsent && !useLocalStorage"
+  [isSpoken]="userConsent && !useLocalStorage"
   isConnected="true"
 >
   <p>
@@ -36,7 +79,11 @@
     headingKey="personal.create-identity.more-info-username-pw"
   ></more-info-button>
 </dialogue-turn>
-<dialogue-turn actor="self">
+<dialogue-turn
+  *ngIf="userConsent"
+  [isSpoken]="userConsent"
+  actor="self"
+>
   <form (ngSubmit)="submitCredentials(username,create,confirm)">
     <input type="submit" hidden /><!-- Include hidden submit-button to enable "enter"-key to trigger ngSubmit -->
 
