--- a/interfaces/HO-Portal/src/app/program/program-people-affected/program-people-affected.component.html
+++ b/interfaces/HO-Portal/src/app/program/program-people-affected/program-people-affected.component.html
@@ -100,4 +100,30 @@
     [headerClass]="column.headerClass"
     [cellClass]="column.cellClass"
   ></ngx-datatable-column>
+
+  <ngx-datatable-column 
+    *ngFor="let column of paymentColumns" 
+    [prop]="column.prop"
+    [name]="column.name"
+    [width]="column.width"
+    [minWidth]="column.minWidth"
+    [maxWidth]="column.maxWidth"
+    [draggable]="column.draggable"
+    [resizeable]="column.resizable"
+    [sortable]="column.sortable"
+    [canAutoResize]="column.canAutoResize"
+    [headerClass]="column.headerClass"
+    [cellClass]="column.cellClass"
+  >
+    <ng-template ngx-datatable-cell-template let-value="value" let-row="row">
+      <span 
+        *ngIf="value==='Failed'" 
+        (click)="errorPopup(row,column)"
+        class="failedCell"
+      >
+        {{value}} <ion-icon name="open"></ion-icon>
+      </span>
+      <span *ngIf="value!=='Failed'">{{value}}</span>
+    </ng-template>
+  </ngx-datatable-column>
 </ngx-datatable>
