AB#3426 AB#3427 AB#3429 AB#3430 feat: show contact details

--- a/interfaces/Referral-App/src/app/referral/referral.page.html
+++ b/interfaces/Referral-App/src/app/referral/referral.page.html
@@ -51,6 +51,7 @@
     <offer
       [offer]="offer"
       [showDetails]="true"
+      [goBack]="goBack.bind(this)"
       (click)="clickOffer(offer)"
     ></offer>
   </div>
