AB#3426 AB#3427 AB#3429 AB#3430 feat: fix lint errors

--- a/interfaces/Referral-App/src/app/components/offer/offer.component.html
+++ b/interfaces/Referral-App/src/app/components/offer/offer.component.html
@@ -5,6 +5,12 @@
         [src]="offer.offerIcon"
         [alt]="offer.offerName"
         (click)="goBack()"
+        *ngIf="goBack"
+      ></ion-img>
+      <ion-img
+        [src]="offer.offerIcon"
+        [alt]="offer.offerName"
+        *ngIf="!goBack"
       ></ion-img>
       <ion-card-title class="ion-text-center">
         {{ offer.offerName }}
