--- a/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
+++ b/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
@@ -50,7 +50,7 @@
             #dateInput="ngModel"
             ngDefaultControl
             [(ngModel)]="theFormModels[question.code]"
-            type="date"
+            type="text"
             placeholder="dd-mm-yyyy"
             required
             [name]="question.code"
