--- a/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
+++ b/interfaces/PA-App/src/app/personal-components/enroll-in-program/enroll-in-program.component.html
@@ -56,7 +56,7 @@
   >
     <ul>
       <li *ngFor="let question of questions">
-        {{ question.label }}<br>
+        <span [innerHTML]="question.label"></span><br>
         <strong>{{ answers[question.code]?.label }}</strong>
       </li>
     </ul>
