--- a/interfaces/AW-App/src/app/shared/phone-number-input/phone-number-input.component.html
+++ b/interfaces/AW-App/src/app/shared/phone-number-input/phone-number-input.component.html
@@ -4,7 +4,7 @@
   inputmode="tel"
   autocomplete="tel"
   pattern="^\+?[0-9 \-\(\)]+"
-  placeholder="+0 000 000 000"
+  [placeholder]="placeholder ? placeholder : '+0 000 000 000'"
   minlength="8"
   maxlength="17"
   [name]="name"
