--- a/interfaces/AW-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
+++ b/interfaces/AW-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
@@ -65,6 +65,7 @@
             ngDefaultControl
             [(ngModel)]="theFormModels[question.code]"
             required
+            [placeholder]="question.placeholder"
             [name]="question.code"
             [disabled]="isSubmitted"
             (isValidChange)="onChangeWithValidation(question.code, phoneNumberInput.value, phoneNumberInput.isValid)"
