--- a/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
+++ b/interfaces/PA-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
@@ -79,6 +79,8 @@
             type="email"
             inputmode="email"
             autocomplete="email"
+            pattern="^[\w\-+]+(\.[\w\-+]+)*@(([\w\-]+\.)*[\w\-]+)\.[a-z]{2,}$"
+            [title]="'q-and-a-set.validation.email'|translate"
             required
             [name]="question.code"
             [disabled]="isSubmitted"
