--- a/interfaces/AW-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
+++ b/interfaces/AW-App/src/app/shared/q-and-a-set/q-and-a-set.component.html
@@ -42,7 +42,6 @@
             [name]="question.code"
             [disabled]="isSubmitted"
             (isValidChange)="onChangeWithValidation(question.code, numInput.value, numInput.isValid)"
-            debounce="300"
           ></numeric-input>
         </div>
         <div *ngSwitchCase="answerType.Date">
@@ -50,12 +49,10 @@
             #dateInput
             ngDefaultControl
             [(ngModel)]="theFormModels[question.code]"
-            type="text"
             required
             [name]="question.code"
             [disabled]="isSubmitted"
             (isValidChange)="onChangeWithValidation(question.code, dateInput.value, dateInput.isValid)"
-            debounce="100"
           ></date-input>
         </div>
         <div *ngSwitchCase="answerType.phoneNumber">
@@ -68,7 +65,6 @@
             [name]="question.code"
             [disabled]="isSubmitted"
             (isValidChange)="onChangeWithValidation(question.code, phoneNumberInput.value, phoneNumberInput.isValid)"
-            debounce="500"
           ></phone-number-input>
         </div>
         <div *ngSwitchCase="answerType.email">
@@ -79,6 +75,8 @@
             type="email"
             inputmode="email"
             autocomplete="email"
+            pattern="^[\w\-+]+(\.[\w\-+]+)*@(([\w\-]+\.)*[\w\-]+)\.[a-z]{2,}$"
+            [title]="'q-and-a-set.validation.email'|translate"
             required
             [name]="question.code"
             [disabled]="isSubmitted"
