--- a/interfaces/PA-App/src/app/shared/numeric-input/numeric-input.component.html
+++ b/interfaces/PA-App/src/app/shared/numeric-input/numeric-input.component.html
@@ -11,6 +11,7 @@
   [placeholder]="placeholder"
   (ionInput)="onInput()"
   (ionChange)="onChange()"
+  debounce="300"
   ngDefaultControl
   [required]="required"
 ></ion-input>
